[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Player/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/Level.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PuzzleParts/PuzzlePart.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Levels/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Levels/ring.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Mechanics/JumpPad.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/church.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Characters/Rectangle.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Levels/Level_7.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/PuzzleParts/PuzzleFragment.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Mechanics/EndArea.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/music/bells.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/Levels/smallFlower.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 217.343, 207.698 )

[node name="Level_6" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
title = "Age 33 : Yes"

[node name="Camera2D" parent="." instance=ExtResource( 1 )]
cpuTexture = ExtResource( 6 )

[node name="AllPuzzleParts" type="Node2D" parent="."]

[node name="PuzzlePart1" parent="AllPuzzleParts" instance=ExtResource( 3 )]
topDir = 0
bottomDir = 2
leftDir = 0
rightDir = 0
hasPlayer = true

[node name="TileMap" parent="AllPuzzleParts/PuzzlePart1" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 327680, 1073741824, 0, 327681, 1073741824, 0, 327682, 1073741824, 0, 327683, 1073741824, 0, 327684, 1073741824, 0, 327685, 1073741824, 0, 327686, 1073741824, 0, 327687, 1073741824, 0, 327688, 1073741824, 0, 327689, 1073741824, 0, 327690, 1073741824, 0, 327691, 1073741824, 0, 327692, 1073741824, 0, 327693, 1073741824, 0, 327694, 1073741824, 0, 327695, 1073741824, 0, 655360, 1073741824, 0, 655361, 1073741824, 0, 655362, 1073741824, 0, 655363, 1073741824, 0, 655364, 1073741824, 0, 655365, 1073741824, 0, 655366, 1073741824, 0, 655367, 1073741824, 0, 655368, 1073741824, 0, 655369, 1073741824, 0, 655370, 1073741824, 0, 655371, 1073741824, 0, 655372, 1073741824, 0, 655373, 1073741824, 0, 655374, 1073741824, 0, 655375, 1073741824, 0 )

[node name="PuzzleFragment" parent="AllPuzzleParts/PuzzlePart1" instance=ExtResource( 11 )]
position = Vector2( 252, 278 )
textToShow = "She asked me what I want to do. My answer was: Spend my life with you."

[node name="PuzzlePart2" parent="AllPuzzleParts" instance=ExtResource( 3 )]
position = Vector2( 0, 1024 )
topDir = 0

[node name="TileMap" parent="AllPuzzleParts/PuzzlePart2" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65551, 0, 0, 131072, 0, 0, 131087, 0, 0, 196608, 0, 0, 196623, 0, 0, 262144, 0, 0, 262159, 0, 0, 327680, 0, 0, 327695, 0, 0, 393216, 0, 0, 393231, 0, 0, 458752, 0, 0, 458767, 0, 0, 524288, 0, 0, 524303, 0, 0, 589824, 0, 0, 589839, 0, 0, 655360, 0, 0, 655375, 0, 0, 720896, 0, 0, 720911, 0, 0, 786432, 0, 0, 786447, 0, 0, 851968, 0, 0, 851983, 0, 0, 917504, 1073741824, 0, 917505, 1073741824, 0, 917506, 1073741824, 0, 917507, 1073741824, 0, 917508, 1073741824, 0, 917509, 1073741824, 0, 917510, 1073741824, 0, 917511, 1073741824, 0, 917512, 1073741824, 0, 917513, 1073741824, 0, 917514, 1073741824, 0, 917515, 1073741824, 0, 917516, 1073741824, 0, 917517, 1073741824, 0, 917518, 1073741824, 0, 917519, 1073741824, 0, 983040, 1073741824, 0, 983041, 1073741824, 0, 983042, 1073741824, 0, 983043, 1073741824, 0, 983044, 1073741824, 0, 983045, 1073741824, 0, 983046, 1073741824, 0, 983047, 1073741824, 0, 983048, 1073741824, 0, 983049, 1073741824, 0, 983050, 1073741824, 0, 983051, 1073741824, 0, 983052, 1073741824, 0, 983053, 1073741824, 0, 983054, 1073741824, 0, 983055, 1073741824, 0 )

[node name="church" type="Sprite" parent="AllPuzzleParts/PuzzlePart2"]
position = Vector2( 328.28, 266.053 )
scale = Vector2( 0.215757, 0.215757 )
texture = ExtResource( 8 )

[node name="Rectangle3" parent="AllPuzzleParts/PuzzlePart2" instance=ExtResource( 9 )]
position = Vector2( 409.096, 411.573 )
scale = Vector2( 0.8, 0.8 )
rectangleColor = Color( 0.313726, 0.54902, 0.843137, 1 )
haveHeart = true

[node name="EndArea" parent="AllPuzzleParts/PuzzlePart2" instance=ExtResource( 12 )]
position = Vector2( 448, 408.37 )
next = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AllPuzzleParts/PuzzlePart2"]
stream = ExtResource( 13 )
volume_db = -20.0

[node name="Area2D" type="Area2D" parent="AllPuzzleParts/PuzzlePart2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AllPuzzleParts/PuzzlePart2/Area2D"]
position = Vector2( 238.988, 238.62 )
shape = SubResource( 1 )

[node name="PuzzleFragment" parent="AllPuzzleParts/PuzzlePart2" instance=ExtResource( 11 )]
position = Vector2( 100.251, 417.966 )
textToShow = "When I saw her in wedding dress, I started crying."

[node name="smallFlower" type="Sprite" parent="AllPuzzleParts/PuzzlePart2"]
position = Vector2( 219.934, 438.98 )
scale = Vector2( 0.0377483, 0.0377483 )
texture = ExtResource( 14 )

[node name="PuzzlePart3" parent="AllPuzzleParts" instance=ExtResource( 3 )]
position = Vector2( 1024, 1024 )
topDir = 0
leftDir = 2
rightDir = 2

[node name="TileMap" parent="AllPuzzleParts/PuzzlePart3" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 0, 1073741824, 0, 1, 1073741824, 0, 6, 1073741824, 0, 11, 1073741824, 0, 12, 1073741824, 0, 13, 1073741824, 0, 14, 1073741824, 0, 15, 1073741824, 0, 65536, 1073741824, 0, 65542, 1073741824, 0, 65551, 1073741824, 0, 131078, 1073741824, 0, 131087, 1073741824, 0, 196614, 1073741824, 0, 196623, 1073741824, 0, 262150, 1073741824, 0, 262159, 1073741824, 0, 327680, 1073741824, 0, 327681, 1073741824, 0, 327682, 1073741824, 0, 327683, 1073741824, 0, 327684, 1073741824, 0, 327685, 1073741824, 0, 327686, 1073741824, 0, 327687, 1073741824, 0, 327688, 1073741824, 0, 327689, 1073741824, 0, 327690, 1073741824, 0, 327695, 1073741824, 0, 524301, 1073741824, 0, 524302, 1073741824, 0, 524303, 1073741824, 0, 589837, 1073741824, 0, 589838, 1073741824, 0, 589839, 1073741824, 0, 655360, 1073741824, 0, 655361, 1073741824, 0, 655362, 1073741824, 0, 655363, 1073741824, 0, 655364, 1073741824, 0, 655365, 1073741824, 0, 655366, 1073741824, 0, 655367, 1073741824, 0, 655368, 1073741824, 0, 655369, 1073741824, 0, 655370, 1073741824, 0, 655371, 1073741824, 0, 655372, 1073741824, 0, 655373, 1073741824, 0, 655374, 1073741824, 0, 655375, 1073741824, 0 )

[node name="jumpPad" parent="AllPuzzleParts/PuzzlePart3" instance=ExtResource( 7 )]
position = Vector2( 155.824, 153.539 )

[node name="jumpPad2" parent="AllPuzzleParts/PuzzlePart3" instance=ExtResource( 7 )]
position = Vector2( 256, 153.592 )

[node name="PuzzlePart4" parent="AllPuzzleParts" instance=ExtResource( 3 )]
position = Vector2( 1025, 0 )
bottomDir = 2
leftDir = 0
rightDir = 0

[node name="TileMap" parent="AllPuzzleParts/PuzzlePart4" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 0, 1073741824, 0, 1, 1073741824, 0, 2, 1073741824, 0, 3, 1073741824, 0, 4, 1073741824, 0, 5, 1073741824, 0, 6, 1073741824, 0, 7, 1073741824, 0, 8, 1073741824, 0, 9, 1073741824, 0, 10, 1073741824, 0, 11, 1073741824, 0, 12, 1073741824, 0, 13, 1073741824, 0, 14, 1073741824, 0, 15, 1073741824, 0, 65536, 1073741824, 0, 65537, 1073741824, 0, 65538, 1073741824, 0, 65539, 1073741824, 0, 65540, 1073741824, 0, 65541, 1073741824, 0, 65542, 1073741824, 0, 65543, 1073741824, 0, 65544, 1073741824, 0, 65545, 1073741824, 0, 65546, 1073741824, 0, 65547, 1073741824, 0, 65548, 1073741824, 0, 65549, 1073741824, 0, 65550, 1073741824, 0, 65551, 1073741824, 0, 131086, 1073741824, 0, 131087, 1073741824, 0, 196622, 1073741824, 0, 196623, 1073741824, 0, 262158, 1073741824, 0, 262159, 1073741824, 0, 327694, 1073741824, 0, 327695, 1073741824, 0, 393225, 1073741824, 0, 393226, 1073741824, 0, 458761, 1073741824, 0, 458762, 1073741824, 0, 524297, 1073741824, 0, 524298, 1073741824, 0, 589833, 1073741824, 0, 589834, 1073741824, 0, 655360, 1073741824, 0, 655361, 1073741824, 0, 655362, 1073741824, 0, 655363, 1073741824, 0, 655364, 1073741824, 0, 655365, 1073741824, 0, 655366, 1073741824, 0, 655367, 1073741824, 0, 655368, 1073741824, 0, 655369, 1073741824, 0, 655370, 1073741824, 0, 655371, 1073741824, 0, 655372, 1073741824, 0, 720896, 1073741824, 0, 720897, 1073741824, 0, 720898, 1073741824, 0, 720899, 1073741824, 0, 720900, 1073741824, 0, 720901, 1073741824, 0, 720902, 1073741824, 0, 720903, 1073741824, 0, 720904, 1073741824, 0, 720905, 1073741824, 0, 720906, 1073741824, 0, 720907, 1073741824, 0, 720908, 1073741824, 0, 786443, 1073741824, 0, 786444, 1073741824, 0, 851979, 1073741824, 0, 851980, 1073741824, 0, 917515, 1073741824, 0, 917516, 1073741824, 0, 917517, 1073741824, 0, 917518, 1073741824, 0, 917519, 1073741824, 0, 983040, 0, 0, 983041, 0, 0, 983051, 1073741824, 0, 983052, 1073741824, 0, 983053, 1073741824, 0, 983054, 1073741824, 0, 983055, 1073741824, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 422.439, 89.4377 )
scale = Vector2( 1, 1.6 )
SPEED = 300

[connection signal="finished" from="AllPuzzleParts/PuzzlePart2/AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="body_entered" from="AllPuzzleParts/PuzzlePart2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="editMode" from="Player" to="." method="_on_Player_editMode"]
